--- a/src/app/interview/interview.component.html
+++ b/src/app/interview/interview.component.html
@@ -1,3 +1,292 @@
-<p>
-  interview works!
-</p>
+<div class="page-title">
+	<div class="container">
+		<div class="column">
+			<h1>Interview time</h1>
+		</div>
+	</div>
+</div>
+<div class="container padding-bottom-2x mb-2">
+	<div class="row align-items-center padding-bottom-2x">
+		<div class="col-md-12">
+			<div class="checkout-steps"><a href="#">4. Health</a><a class="active" href="#"><span class="angle"></span>3. Lifestyle</a><a class="completed" href="#"><span class="step-indicator icon-circle-check"></span><span class="angle"></span>2. Financial Status</a><a class="completed" href="#"><span class="step-indicator icon-circle-check"></span><span class="angle"></span>1. Profile</a></div>
+		</div>
+		<div class="col-md-12 text-md-left text-center">
+			<form class="row" id="interviewProfile">
+				<div class="col-md-12">
+					<h2 class="text-center">Let's get to know you better</h2>
+					<p class="text-center">By the end of interview, you will get your financial report. Good luck !</p>
+					<div class="mt-30 hidden-md-up"></div>	    	
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-fn">First Name</label>
+						<input class="form-control" type="text" id="account-fn" value="Daniel" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-ln">Last Name</label>
+						<input class="form-control" type="text" id="account-ln" value="Adams" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-email">E-mail Address</label>
+						<input class="form-control" type="email" id="account-email" value="daniel.adams@mail.com">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-phone">Phone Number</label>
+						<input class="form-control" type="text" id="account-phone" value="+7(805) 348 95 72" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-pass">Date of Birth</label>
+						<input class="form-control" type="date" id="date-input" value="2017-06-13">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-confirm-pass">Gender</label>
+						<select class="form-control" id="select-input">
+							<option>Choose option...</option>
+							<option>Male</option>
+							<option>Female</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-12">
+					<hr class="mt-2 mb-3">
+					<div class="d-flex flex-wrap justify-content-between align-items-center">
+						<button class="btn btn-primary margin-right-none" type="button" data-toast="" data-toast-position="topRight" data-toast-type="success" data-toast-icon="icon-circle-check" data-toast-title="Geat!" data-toast-message="We are now friend !">Next</button>
+					</div>
+				</div>
+			</form>
+
+<div id="interviewFinancial" class="fadeInLeftBig animated">
+			<form class="row">
+				<div class="col-md-12" >
+					<h2 class="text-center">Awesome {{firstName}} {{lastName}}, we are friend now. </h2>
+					<p class="text-center">Tell me more about your financial status, we recommand good plan for you!</p>
+					<div class="mt-30 hidden-md-up"></div>	    	
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-fn">Do you own house(s)? How many?</label>
+						<input class="form-control" type="text" id="account-fn" value="Daniel" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-ln">Do you own car(s)?</label>
+						<input class="form-control" type="text" id="account-ln" value="Adams" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-email">E-mail Address</label>
+						<input class="form-control" type="email" id="account-email" value="daniel.adams@mail.com" disabled="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-phone">Phone Number</label>
+						<input class="form-control" type="text" id="account-phone" value="+7(805) 348 95 72" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-pass">Date of Birth</label>
+						<input class="form-control" type="date" id="date-input" value="2017-06-13">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-confirm-pass">Gender</label>
+						<select class="form-control" id="select-input">
+							<option>Choose option...</option>
+							<option>Male</option>
+							<option>Female</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-12">
+					<hr class="mt-2 mb-3">
+					<div class="d-flex flex-wrap justify-content-between align-items-center">
+						<button class="btn btn-primary margin-right-none" type="button" data-toast="" data-toast-position="topRight" data-toast-type="success" data-toast-icon="icon-circle-check" data-toast-title="Geat!" data-toast-message="We are now friend !">Next</button>
+					</div>
+				</div>
+			</form>
+</div>
+
+
+<div id="interviewFinancial" class="fadeInLeftBig animated">
+			<form class="row">
+				<div class="col-md-12" >
+					<h2 class="text-center">Awesome {{firstName}} {{lastName}}, we are friend now. </h2>
+					<p class="text-center">Tell me more about your financial status, we recommand good plan for you!</p>
+					<div class="mt-30 hidden-md-up"></div>	    	
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-fn">Do you own house(s)? How many?</label>
+						<input class="form-control" type="text" id="account-fn" value="Daniel" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-ln">Do you own car(s)?</label>
+						<input class="form-control" type="text" id="account-ln" value="Adams" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-email">E-mail Address</label>
+						<input class="form-control" type="email" id="account-email" value="daniel.adams@mail.com" disabled="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-phone">Phone Number</label>
+						<input class="form-control" type="text" id="account-phone" value="+7(805) 348 95 72" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-pass">Date of Birth</label>
+						<input class="form-control" type="date" id="date-input" value="2017-06-13">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-confirm-pass">Gender</label>
+						<select class="form-control" id="select-input">
+							<option>Choose option...</option>
+							<option>Male</option>
+							<option>Female</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-12">
+					<hr class="mt-2 mb-3">
+					<div class="d-flex flex-wrap justify-content-between align-items-center">
+						<button class="btn btn-primary margin-right-none" type="button" data-toast="" data-toast-position="topRight" data-toast-type="success" data-toast-icon="icon-circle-check" data-toast-title="Geat!" data-toast-message="We are now friend !">Next</button>
+					</div>
+				</div>
+			</form>
+</div>
+<div id="interviewFinancial" class="fadeInLeftBig animated">
+			<form class="row">
+				<div class="col-md-12" >
+					<h2 class="text-center">Awesome {{firstName}} {{lastName}}, we are friend now. </h2>
+					<p class="text-center">Tell me more about your financial status, we recommand good plan for you!</p>
+					<div class="mt-30 hidden-md-up"></div>	    	
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-fn">Do you own house(s)? How many?</label>
+						<input class="form-control" type="text" id="account-fn" value="Daniel" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-ln">Do you own car(s)?</label>
+						<input class="form-control" type="text" id="account-ln" value="Adams" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-email">E-mail Address</label>
+						<input class="form-control" type="email" id="account-email" value="daniel.adams@mail.com" disabled="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-phone">Phone Number</label>
+						<input class="form-control" type="text" id="account-phone" value="+7(805) 348 95 72" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-pass">Date of Birth</label>
+						<input class="form-control" type="date" id="date-input" value="2017-06-13">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-confirm-pass">Gender</label>
+						<select class="form-control" id="select-input">
+							<option>Choose option...</option>
+							<option>Male</option>
+							<option>Female</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-12">
+					<hr class="mt-2 mb-3">
+					<div class="d-flex flex-wrap justify-content-between align-items-center">
+						<button class="btn btn-primary margin-right-none" type="button" data-toast="" data-toast-position="topRight" data-toast-type="success" data-toast-icon="icon-circle-check" data-toast-title="Geat!" data-toast-message="We are now friend !">Next</button>
+					</div>
+				</div>
+			</form>
+</div>
+<div id="interviewFinancial" class="fadeInLeftBig animated">
+			<form class="row">
+				<div class="col-md-12" >
+					<h2 class="text-center">Awesome {{firstName}} {{lastName}}, we are friend now. </h2>
+					<p class="text-center">Tell me more about your financial status, we recommand good plan for you!</p>
+					<div class="mt-30 hidden-md-up"></div>	    	
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-fn">Do you own house(s)? How many?</label>
+						<input class="form-control" type="text" id="account-fn" value="Daniel" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-ln">Do you own car(s)?</label>
+						<input class="form-control" type="text" id="account-ln" value="Adams" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-email">E-mail Address</label>
+						<input class="form-control" type="email" id="account-email" value="daniel.adams@mail.com" disabled="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-phone">Phone Number</label>
+						<input class="form-control" type="text" id="account-phone" value="+7(805) 348 95 72" required="">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-pass">Date of Birth</label>
+						<input class="form-control" type="date" id="date-input" value="2017-06-13">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="account-confirm-pass">Gender</label>
+						<select class="form-control" id="select-input">
+							<option>Choose option...</option>
+							<option>Male</option>
+							<option>Female</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-12">
+					<hr class="mt-2 mb-3">
+					<div class="d-flex flex-wrap justify-content-between align-items-center">
+						<button class="btn btn-primary margin-right-none" type="button" data-toast="" data-toast-position="topRight" data-toast-type="success" data-toast-icon="icon-circle-check" data-toast-title="Geat!" data-toast-message="We are now friend !">Next</button>
+					</div>
+				</div>
+			</form>
+</div>
+		</div>
+	</div>
+</div>
