--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -154,7 +154,7 @@
           <div class="row">
             <div class="col-md-7 padding-bottom-1x">
               <!-- Payment Methods-->
-              <div class="margin-bottom-1x" style="max-width: 615px;"><img src="img/payment_methods.png" alt="Payment Methods">
+              <div class="margin-bottom-1x" style="max-width: 615px;"><img src="assets/img/payment_methods.png" alt="Payment Methods">
               </div>
             </div>
             <div class="col-md-5 padding-bottom-1x">
