add mockup text

--- a/src/app/insurance/insurance.component.html
+++ b/src/app/insurance/insurance.component.html
@@ -6,12 +6,40 @@
 	</div>
 </div>
 <div class="container padding-bottom-2x mb-2">
-	<div class="row align-items-center padding-bottom-2x">
-	  <div class="col-md-5"><img class="d-block w-270 m-auto" src="assets/img/features/01.jpg" alt="Online Shopping"></div>
-	  <div class="col-md-7 text-md-left text-center">
-	    <div class="mt-30 hidden-md-up"></div>
-	    <h2>Bla Bla Bla..</h2>
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id purus at risus pellentesque faucibus a quis eros. In eu fermentum leo. Integer ut eros lacus. Proin ut accumsan leo. Morbi vitae est eget dolor consequat aliquam eget quis dolor. Mauris rutrum fermentum erat, at euismod lorem pharetra nec. Duis erat lectus, ultrices euismod sagittis at, pharetra eu nisl. Phasellus id ante at velit tincidunt hendrerit. Aenean dolor dolor, tristique nec placerat nec.</p><a class="text-medium text-decoration-none" href="shop-grid-ls.html">View Products&nbsp;<i class="icon-arrow-right"></i></a>
-	  </div>
-	</div>
+  <div class="row align-items-center padding-bottom-2x">
+    <div class="col-md-5"><img class="d-block w-270 m-auto" src="assets/img/features/01.jpg" alt="Online Shopping"></div>
+    <div class="col-md-7 text-md-left text-center">
+      <div class="mt-30 hidden-md-up"></div>
+      <h2>Why you need a travel insurance?</h2>
+      <p>Imagine when you travel to a conutry, consectetur adipiscing elit. Aliquam id purus at risus pellentesque faucibus a quis eros. In eu fermentum leo. Integer ut eros lacus. Proin ut accumsan leo. Morbi vitae est eget dolor consequat aliquam eget quis dolor. Mauris rutrum fermentum erat, at euismod lorem pharetra nec. Duis erat lectus, ultrices euismod sagittis at, pharetra eu nisl. Phasellus id ante at velit tincidunt hendrerit. Aenean dolor dolor, tristique nec placerat nec.</p><a class="text-medium text-decoration-none" routerLink="/insurance-travel">View Products&nbsp;<i class="icon-arrow-right"></i></a>
+    </div>
+  </div>
+  <hr>
+  <div class="row align-items-center padding-top-2x padding-bottom-2x">
+    <div class="col-md-5 order-md-2"><img class="d-block w-270 m-auto" src="assets/img/features/02.jpg" alt="Delivery"></div>
+    <div class="col-md-7 order-md-1 text-md-left text-center">
+      <div class="mt-30 hidden-md-up"></div>
+      <h2>How much cover do i need for my car?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id purus at risus pellentesque faucibus a quis eros. In eu fermentum leo. Integer ut eros lacus. Proin ut accumsan leo. Morbi vitae est eget dolor consequat aliquam eget quis dolor. Mauris rutrum fermentum erat, at euismod lorem pharetra nec. Duis erat lectus, ultrices euismod sagittis at, pharetra eu nisl. Phasellus id ante at velit tincidunt hendrerit. Aenean dolor dolor, tristique nec placerat nec.</p><a class="text-medium text-decoration-none" routerLink="/insurance-motor">View Products&nbsp;<i class="icon-arrow-right"></i></a>
+    </div>
+  </div>
+  <hr>
+  <div class="row align-items-center padding-top-2x padding-bottom-2x">
+    <div class="col-md-5"><img class="d-block w-270 m-auto" src="assets/img/features/03.jpg" alt="Mobile App"></div>
+    <div class="col-md-7 text-md-left text-center">
+      <div class="mt-30 hidden-md-up"></div>
+      <h2>Need urgent cash for some reason?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id purus at risus pellentesque faucibus a quis eros. In eu fermentum leo. Integer ut eros lacus. Proin ut accumsan leo. Morbi vitae est eget dolor consequat aliquam eget quis dolor. Mauris rutrum fermentum erat, at euismod lorem pharetra nec. Duis erat lectus, ultrices euismod sagittis at, pharetra eu nisl. Phasellus id ante at velit tincidunt hendrerit. Aenean dolor dolor, tristique nec placerat nec.</p><a class="text-medium text-decoration-none" routerLink="insurance-motor">View Products&nbsp;<i class="icon-arrow-right"></i></a>
+    </div>
+  </div>
+  <hr>
+  <div class="row align-items-center padding-top-2x padding-bottom-2x">
+    <div class="col-md-5 order-md-2"><img class="d-block w-270 m-auto" src="assets/img/features/04.jpg" alt="Delivery"></div>
+    <div class="col-md-7 order-md-1 text-md-left text-center">
+      <div class="mt-30 hidden-md-up"></div>
+      <h2>Have extra free cash?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id purus at risus pellentesque faucibus a quis eros. In eu fermentum leo. Integer ut eros lacus. Proin ut accumsan leo. Morbi vitae est eget dolor consequat aliquam eget quis dolor. Mauris rutrum fermentum erat, at euismod lorem pharetra nec. Duis erat lectus, ultrices euismod sagittis at, pharetra eu nisl. Phasellus id ante at velit tincidunt hendrerit. Aenean dolor dolor, tristique nec placerat nec.</p><a class="text-medium text-decoration-none" href="contacts.html">See Outlet Stores&nbsp;<i class="icon-arrow-right"></i></a>
+    </div>
+  </div>
 </div>
+
