--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,29 @@
 
-      <section class="hero-slider" style="background-image: url(assets/img/hero-slider/main-bg.jpg);">
+      <!-- <section class="hero-slider" style="background-image: url(assets/img/hero-slider/main-bg.jpg);">
       <div class="text-center padding-top-3x">
                 <h3 class="display-4 text-normal text-shadow mb-1">Your private financial advisor</h3>
                 <h2 class="display-2 text-bold text-shadow">UNDERSTAND. ADVICE.</h2>
                 <h4 class="d-inline-block h2 text-normal text-shadow border-default border-left-0 border-right-0 mb-4">base on your need</h4><br><a class="btn btn-primary margin-bottom-none" routerLink="interview">Let's get started</a>
               </div>
+      </section> -->
+      <section class="hero-slider" style="background-image: url(assets/img/hero-slider/main-bg.jpg);">
+        <div class="owl-carousel large-controls " data-owl-carousel="{ 'nav': false, 'dots': false, 'loop': false, 'autoplay': false, 'autoplayTimeout': 7000 }">
+          <div class="item">
+            <div class="container padding-top-3x">
+              <div class="row justify-content-center align-items-center">
+                <div class="col-md-6 padding-bottom-2x mb-3"><img class="d-block mx-auto" src="assets/img/hero-slider/02.png" alt="Puma Backpack"></div>
+                <div class="col-lg-6 col-md-6 padding-bottom-2x text-md-left text-center">
+                  <div class="from-bottom">
+                    <!-- <img class="d-inline-block w-150 mb-4" src="assets/img/partners/01.jpg" alt="Finabot"> -->
+                    <div class="h1 text-body text-normal mb-2 pt-1"><span class="text-bold">FINABOT</span></div>
+                    <div class="h2 text-body text-normal mb-2 pt-1">Your private financial advisor</div>
+                    <div class="h2 text-body text-normal mb-4 pb-1">UNDERSTAND.  <span class="text-bold">ADVICE.</span></div>
+                  </div><a class="btn btn-primary scale-up delay-1" routerLink="interview">Let's get started</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Top Categories-->
       <section class="container padding-top-3x">
@@ -13,8 +32,8 @@
           <div class="col-md-4 col-sm-6">
             <div class="card mb-30"><a class="card-img-tiles" href="shop-grid-ls.html">
                 <div class="inner">
-                  <div class="main-img"><img src="assets/img/shop/categories/01.jpg" alt="Category"></div>
-                  <div class="thumblist"><img src="assets/img/shop/categories/02.jpg" alt="Category"><img src="assets/img/shop/categories/03.jpg" alt="Category"></div>
+                  <div class="main-img"><img src="assets/img/partners/01.jpg" alt="Category"></div>
+                  <div class="thumblist"><img src="assets/img/partners/02.jpg" alt="Category"><img src="assets/img/partners/03.jpg" alt="Category"></div>
                 </div></a>
               <div class="card-body text-center">
                 <h4 class="card-title">Insurance Products</h4>
@@ -25,8 +44,8 @@
           <div class="col-md-4 col-sm-6">
             <div class="card mb-30"><a class="card-img-tiles" href="shop-grid-ls.html">
                 <div class="inner">
-                  <div class="main-img"><img src="assets/img/shop/categories/04.jpg" alt="Category"></div>
-                  <div class="thumblist"><img src="assets/img/shop/categories/05.jpg" alt="Category"><img src="assets/img/shop/categories/06.jpg" alt="Category"></div>
+                  <div class="main-img"><img src="assets/img/partners/04.jpg" alt="Category"></div>
+                  <div class="thumblist"><img src="assets/img/partners/05.jpg" alt="Category"><img src="assets/img/partners/06.jpg" alt="Category"></div>
                 </div></a>
               <div class="card-body text-center">
                 <h4 class="card-title">Credit Cards Offers</h4>
@@ -37,8 +56,8 @@
           <div class="col-md-4 col-sm-6">
             <div class="card mb-30"><a class="card-img-tiles" href="shop-grid-ls.html">
                 <div class="inner">
-                  <div class="main-img"><img src="assets/img/shop/categories/07.jpg" alt="Category"></div>
-                  <div class="thumblist"><img src="assets/img/shop/categories/08.jpg" alt="Category"><img src="assets/img/shop/categories/09.jpg" alt="Category"></div>
+                  <div class="main-img"><img src="assets/img/partners/07.jpg" alt="Category"></div>
+                  <div class="thumblist"><img src="assets/img/partners/08.jpg" alt="Category"><img src="assets/img/partners/09.jpg" alt="Category"></div>
                 </div></a>
               <div class="card-body text-center">
                 <h4 class="card-title">Bank Loans</h4>
@@ -58,21 +77,21 @@
               <h3 class="widget-title">Top Insurance Products</h3>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/01.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/01.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">Travel Insurances</a></h4><span class="entry-meta">$155.00</span>
                 </div>
               </div>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/03.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/03.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">Motor Insurance</a></h4><span class="entry-meta">$49.50</span>
                 </div>
               </div>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/04.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/04.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">Personal Accidents</a></h4><span class="entry-meta">$29.99</span>
                 </div>
@@ -84,21 +103,21 @@
               <h3 class="widget-title">Top Credit Cards Offers</h3>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/05.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/05.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">BANK ABD</a></h4><span class="entry-meta">Free $500 Capital Vouchers</span>
                 </div>
               </div>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/06.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/06.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">ADS Bank</a></h4><span class="entry-meta">Free luggages</span>
                 </div>
               </div>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/07.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/07.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">KOI BANK</a></h4><span class="entry-meta">Free annual fee</span>
                 </div>
@@ -110,21 +129,21 @@
               <h3 class="widget-title">Top Best Loans</h3>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/08.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/08.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">GDH BANK</a></h4><span class="entry-meta">Lowest 2.5% interest</span>
                 </div>
               </div>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/09.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/09.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">OOP BANK</a></h4><span class="entry-meta">Loan up to $20k</span>
                 </div>
               </div>
               <!-- Entry-->
               <div class="entry">
-                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/shop/widget/10.jpg" alt="Product"></a></div>
+                <div class="entry-thumb"><a href="shop-single.html"><img src="assets/img/partners/10.jpg" alt="Product"></a></div>
                 <div class="entry-content">
                   <h4 class="entry-title"><a href="shop-single.html">PPOL BANK</a></h4><span class="entry-meta">Free admin fee</span>
                 </div>
@@ -137,7 +156,7 @@
       <section class="bg-faded padding-top-3x padding-bottom-3x">
         <div class="container">
           <h3 class="text-center mb-30 pb-2">Our Patners</h3>
-          <div class="owl-carousel" data-owl-carousel="{ &quot;nav&quot;: false, &quot;dots&quot;: false, &quot;loop&quot;: true, &quot;autoplay&quot;: true, &quot;autoplayTimeout&quot;: 4000, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:2}, &quot;470&quot;:{&quot;items&quot;:3},&quot;630&quot;:{&quot;items&quot;:4},&quot;991&quot;:{&quot;items&quot;:5},&quot;1200&quot;:{&quot;items&quot;:6}} }"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/01.png" alt="Adidas"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/02.png" alt="Brooks"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/03.png" alt="Valentino"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/04.png" alt="Nike"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/05.png" alt="Puma"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/06.png" alt="New Balance"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/brands/07.png" alt="Dior"></div>
+          <div class="owl-carousel" data-owl-carousel="{ &quot;nav&quot;: false, &quot;dots&quot;: false, &quot;loop&quot;: true, &quot;autoplay&quot;: true, &quot;autoplayTimeout&quot;: 4000, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:2}, &quot;470&quot;:{&quot;items&quot;:3},&quot;630&quot;:{&quot;items&quot;:4},&quot;991&quot;:{&quot;items&quot;:5},&quot;1200&quot;:{&quot;items&quot;:6}} }"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/01.jpg" alt="Adidas"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/02.jpg" alt="Brooks"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/03.jpg" alt="Valentino"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/04.jpg" alt="Nike"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/05.jpg" alt="Puma"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/06.jpg" alt="New Balance"><img class="d-block w-110 opacity-75 m-auto" src="assets/img/partners/07.jpg" alt="Dior"></div>
         </div>
       </section>
       <section class="container padding-top-3x ">
