--- a/src/app/insurance-travel/insurance-travel.component.html
+++ b/src/app/insurance-travel/insurance-travel.component.html
@@ -2,6 +2,12 @@
 	<div class="container">
 		<form class="row" >
 			<div class="col-md-12">
+				<div class="alert alert-primary alert-dismissible fade show margin-bottom-1x"><span class="alert-close" data-dismiss="alert"></span>
+	              <h3>Hello Adam!</h3>
+	              <p> Based on your provided information, you have 2 houses with 1 car. Total loan up to $1 Million. We advise you to take up travel insurance with sum insured > $1.5 Million. And you have healthy problem on your heart, so suggest to take higher protection on medical.</p>
+	            </div>
+			</div>
+			<div class="col-md-12">
 				<div class="form-group">
 						<h2 class="text-center">Travel Insurance</h2>
 				</div>
