--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,7 +75,7 @@
             <div class="search"><i class="icon-search"></i></div>
             <div class="account"><a routerLink="profile"></a><i class="icon-head"></i>
               <ul class="toolbar-dropdown">
-                <li class="sub-menu-user">
+                <li class="sub-menu-user" routerLink="profile">
                   <div class="user-ava"><img src="assets/img/account/user-ava-sm.jpg" alt="Daniel Adams">
                   </div>
                   <div class="user-info">
